--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass --watch sass/styles.scss styles.css" 
+    "sass": "sass --watch sass:css" 
 
   },
   "repository": {
